# zohar_aviv_plugin

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  run.sh
plugins/rtph264pass/: gstrtph264pass.c
src/: App.cpp  App.h
